// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`footer.styles BioText should match the snapshot with dark theme 1`] = `
.c0 {
  font-size: 16px;
  font-family: Inter-Regular;
  color: #a3a3a3;
  margin-top: 0px;
  font-weight: normal;
  text-transform: none;
  cursor: text;
  line-height: 24px;
}

<p
  class="c0 "
>
  Bio text
</p>
`;

exports[`footer.styles BioText should match the snapshot with light theme 1`] = `
.c0 {
  font-size: 16px;
  font-family: Inter-Regular;
  color: #737373;
  margin-top: 0px;
  font-weight: normal;
  text-transform: none;
  cursor: text;
  line-height: 24px;
}

<p
  class="c0 "
>
  Bio text
</p>
`;

exports[`footer.styles BrandTitle should match the snapshot with dark theme 1`] = `
.c0 {
  font-size: 18px;
  font-family: Inter-Regular;
  color: #F0F2F1;
  margin-top: 0px;
  font-weight: normal;
  text-transform: none;
  cursor: text;
  line-height: 26px;
}

.c1 {
  display: flex;
  align-items: center;
  gap: 16px;
}

<h2
  class="c0 c1"
>
  Brand
</h2>
`;

exports[`footer.styles BrandTitle should match the snapshot with light theme 1`] = `
.c0 {
  font-size: 18px;
  font-family: Inter-Regular;
  color: #0a0a0a;
  margin-top: 0px;
  font-weight: normal;
  text-transform: none;
  cursor: text;
  line-height: 26px;
}

.c1 {
  display: flex;
  align-items: center;
  gap: 16px;
}

<h2
  class="c0 c1"
>
  Brand
</h2>
`;

exports[`footer.styles ContactSection should match the snapshot 1`] = `
.c0 {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 4px;
}

<div
  class="c0"
/>
`;

exports[`footer.styles ContactText should match the snapshot with dark theme 1`] = `
.c0 {
  font-size: 16px;
  font-family: Inter-Regular;
  color: #a3a3a3;
  margin-top: 0px;
  font-weight: normal;
  text-transform: none;
  cursor: text;
  line-height: 24px;
}

<p
  class="c0 "
>
  Email
</p>
`;

exports[`footer.styles ContactText should match the snapshot with light theme 1`] = `
.c0 {
  font-size: 16px;
  font-family: Inter-Regular;
  color: #737373;
  margin-top: 0px;
  font-weight: normal;
  text-transform: none;
  cursor: text;
  line-height: 24px;
}

<p
  class="c0 "
>
  Email
</p>
`;

exports[`footer.styles ContactTitle should match the snapshot with dark theme 1`] = `
.c0 {
  font-size: 16px;
  font-family: Inter-Regular;
  color: #F0F2F1;
  margin-top: 0px;
  font-weight: normal;
  text-transform: none;
  cursor: text;
  line-height: 24px;
}

.c1 {
  margin-bottom: 4px;
}

<p
  class="c0 c1"
>
  Contact
</p>
`;

exports[`footer.styles ContactTitle should match the snapshot with light theme 1`] = `
.c0 {
  font-size: 16px;
  font-family: Inter-Regular;
  color: #0a0a0a;
  margin-top: 0px;
  font-weight: normal;
  text-transform: none;
  cursor: text;
  line-height: 24px;
}

.c1 {
  margin-bottom: 4px;
}

<p
  class="c0 c1"
>
  Contact
</p>
`;

exports[`footer.styles ContentWrapper should match the snapshot 1`] = `
.c0 {
  display: flex;
  gap: 150px;
  width: 100%;
  padding-bottom: 32px;
  border-bottom: 1px solid #e5e5e5;
}

<div
  class="c0"
/>
`;

exports[`footer.styles CopyrightContainer should match the snapshot 1`] = `
.c0 {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 24px 0;
}

<div
  class="c0"
/>
`;

exports[`footer.styles CopyrightText should match the snapshot with dark theme 1`] = `
.c0 {
  font-size: 14px;
  font-family: Inter-Regular;
  color: #a3a3a3;
  margin-top: 0px;
  font-weight: normal;
  text-transform: none;
  cursor: text;
  line-height: 20px;
}

.c1 {
  display: flex;
  align-items: center;
  gap: 4px;
}

<p
  class="c0 c1"
>
  © 2025
</p>
`;

exports[`footer.styles CopyrightText should match the snapshot with light theme 1`] = `
.c0 {
  font-size: 14px;
  font-family: Inter-Regular;
  color: #737373;
  margin-top: 0px;
  font-weight: normal;
  text-transform: none;
  cursor: text;
  line-height: 20px;
}

.c1 {
  display: flex;
  align-items: center;
  gap: 4px;
}

<p
  class="c0 c1"
>
  © 2025
</p>
`;

exports[`footer.styles EmailIcon should match the snapshot with dark theme 1`] = `<svg />`;

exports[`footer.styles EmailIcon should match the snapshot with light theme 1`] = `<svg />`;

exports[`footer.styles FooterContainer should match the snapshot 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  width: 100%;
  background-color: #ffffff;
  padding: 32px 210px;
  border-top: 1px solid #e5e5e5;
  box-sizing: border-box;
}

<footer
  class="c0"
/>
`;

exports[`footer.styles GithubIcon should match the snapshot with dark theme 1`] = `<svg />`;

exports[`footer.styles GithubIcon should match the snapshot with light theme 1`] = `<svg />`;

exports[`footer.styles HeartIcon should match the snapshot 1`] = `
<svg
  class=""
  fill="#ef4444"
  height="24"
  style="min-width: 24px; min-height: 24px; max-width: 24px; max-height: 24px;"
  width="24"
/>
`;

exports[`footer.styles InfoSection should match the snapshot 1`] = `
.c0 {
  flex: 1;
  display: flex;
  flex-direction: column;
  max-width: 500px;
  gap: 16px;
}

<div
  class="c0"
/>
`;

exports[`footer.styles LinkedinIcon should match the snapshot 1`] = `<svg />`;

exports[`footer.styles LogoIcon should match the snapshot 1`] = `<svg />`;

exports[`footer.styles SocialLink should match the snapshot 1`] = `
.c0 {
  display: flex;
  align-items: center;
  justify-content: center;
  transition: transform 0.2s ease;
}

.c0:hover {
  transform: scale(1.1);
}

<a
  class="c0"
  href="#"
/>
`;

exports[`footer.styles SocialLinks should match the snapshot 1`] = `
.c0 {
  display: flex;
  align-items: center;
  gap: 24px;
}

<div
  class="c0"
/>
`;
